side bar user list

--- a/profiles/templates/profiles/sidebar_um.html
+++ b/profiles/templates/profiles/sidebar_um.html
@@ -12,7 +12,10 @@
                                     
                                     <a href="{% url 'profiles:add_User_form'%}" class="item">Add User Form
                                         <i class="user icon"></i>
-                                    </a>  
+                                    </a>
+                                    <a href="{% url 'profiles:user_list'%}" class="item">User List
+                                        <i class="h square icon"></i>
+                                    </a>
                                     <a href="{% url 'unitmanagement:health_form'%}" class="item">Health Form
                                         <i class="first aid icon"></i>
                                     </a>  
@@ -21,7 +24,7 @@
                                     </a>  
                                     <a href="{% url 'unitmanagement:health_record'%}" class="item">Health Records
                                         <i class="h square icon"></i>
-                                    </a>  
+                                    </a>
                                 </div>
                         </div>
                         <!>
