Removed microchip and serial number as an input during K9 adding

--- a/planningandacquiring/templates/planningandacquiring/K9_detail.html
+++ b/planningandacquiring/templates/planningandacquiring/K9_detail.html
@@ -62,6 +62,14 @@
               <th>Microchip</th>
                 <td>{{k9.microchip}}</td>
             </tr>
+            <tr>
+              <th>Mother</th>
+                <td>{{parent.mother}}</td>
+            </tr>
+            <tr>
+              <th>Father</th>
+                <td>{{parent.father}}</td>
+            </tr>
 
     		</thead>
         </table>
