--- a/planningandacquiring/templates/planningandacquiring/add_donated_K9.html
+++ b/planningandacquiring/templates/planningandacquiring/add_donated_K9.html
@@ -57,14 +57,11 @@
     </div>
 
     <div class="fields">
-        <div class="four wide field">
+        <div class="six wide field">
             <label>Birthdate</label>
             {{form.birth_date}}
         </div>
-            <div class="four wide field">
-        <label>Microchip</label>
-        {{form.microchip}}
-    </div>
+
     </div>
 
 
