--- a/inventory/templates/inventory/medicine_add.html
+++ b/inventory/templates/inventory/medicine_add.html
@@ -23,14 +23,18 @@
                                     {{form.medicine}}
                                 </div>
 
-                                <div class="two fields">
-                                    <div class="field">
+                                <div class="three fields">
+                                    <div class="seven wide field">
                                         <label>Dose</label>
                                         {{form.dose}}
                                     </div>
-                                    <div class="field">
+                                    <div class="five wide field">
                                         <label>Unit of Measurement</label>
                                         {{form.uom}}
+                                    </div>
+                                    <div class="four wide field">
+                                        <label>Price</label>
+                                        {{form.price}}
                                     </div>
                                 </div>
 
