--- a/inventory/templates/inventory/miscellaneous_add.html
+++ b/inventory/templates/inventory/miscellaneous_add.html
@@ -18,14 +18,18 @@
                             {% endif %}
                             <form class = "ui inverted form" method="POST">
                                 {% csrf_token %}
-                                <div class="two fields">
-                                    <div class="field">
+                                <div class="three fields">
+                                    <div class="seven wide field">
                                         <label>Miscellaneous</label>
                                         {{form.miscellaneous}}
                                     </div>
-                                    <div class="field">
+                                    <div class="five wide field">
                                         <label>Unit of Measurement</label>
                                         {{form.uom}}
+                                    </div>
+                                    <div class="four wide field">
+                                        <label>Price</label>
+                                        {{form.price}}
                                     </div>
                                 </div>
 
