--- a/profiles/templates/profiles/sidebar_deployment.html
+++ b/profiles/templates/profiles/sidebar_deployment.html
@@ -9,7 +9,9 @@
                         <div class="three wide column">
                                 <div class="ui tiny pointing vertical menu" style="width:230px;">
                                     <a class="item"> <b>Deployment Menu</b></a>
-                                    
+                                    <a href="{% url 'deployment:location_form'%}" class="item">Add Location 
+                                        <i class="plus circle icon"></i>
+                                    </a>  
                                     <a href="{% url 'deployment:deployed_dogs'%}" class="item">Deployed Dogs
                                         <i class="list alternate icon"></i>
                                     </a>  
