A bunch of micro fixes in PA and UM
Includes K9 parents display and Health form display

--- a/unitmanagement/templates/unitmanagement/health_form.html
+++ b/unitmanagement/templates/unitmanagement/health_form.html
@@ -34,8 +34,8 @@
                 {% for form in formset %}
                 <tr id="{{ form.prefix }}-row" class="formset_class">
                     {% for field in form.hidden_fields %}{{ field }}{% endfor %}
-                    {% for field in form %}
-                    {% if form.instance.pk %} {{ form.DELETE }}{% endif %}
+                    {% for field in form.visible_fields %}
+                    {% if form.visible_fields.instance.pk %} {{ form.visible_fields.DELETE }}{% endif %}
                             <span class ="text-danger small">{{field.errors}}</span>
                             <th>{{field.label_tag}}</th>
                             <td>{{field}}</td>
