--- a/planningandacquiring/templates/planningandacquiring/K9_list.html
+++ b/planningandacquiring/templates/planningandacquiring/K9_list.html
@@ -3,6 +3,10 @@
     {{Title}}
     <div class="sub header">List of all K9s on record</div>
 </h1>
+
+        <Button class="ui blue button">Add Unaffiliated K9</Button>
+<div class = "ui segment">
+
 		<table id="tabledata" class="ui celled table">
         	<thead>
           	<tr>
@@ -35,7 +39,7 @@
 				{% endfor %}
         </tbody>
     </table>
-
+</div>
 <script type="text/javascript">
 	
 	$(document).ready(function() {
