--- a/planningandacquiring/templates/planningandacquiring/add_K9_offspring.html
+++ b/planningandacquiring/templates/planningandacquiring/add_K9_offspring.html
@@ -52,15 +52,12 @@
     </div>
 
     <div class="fields">
-        <div class="eight wide field">
-            <label>Breed</label>
-            {{form.breed}}
-        </div>
-        <div class="four wide field">
+
+        <div class="six wide field">
             <label>Sex</label>
             {{form.sex}}
         </div>
-        <div class="four wide field">
+        <div class="six wide field">
             <label>Color</label>
             {{form.color}}
         </div>
