--- a/profiles/templates/profiles/user_detail.html
+++ b/profiles/templates/profiles/user_detail.html
@@ -9,8 +9,9 @@
     <a class="item" data-tab="second">Personal Information</a>
     <!--<a class="item" data-tab="third">Education</a>-->
 </div>
+
 <div class="ui tab segment active" data-tab="first">
- <table id="tabledata1" class="ui celled table">
+ <table id="tabledata1" class="ui two column celled table">
           	<tr>
                 <td>Name</td>
                 <td>{{user}}</td>
@@ -101,8 +102,9 @@
             </tr>
         </table>
 </div>
+
 <div class="ui tab segment" data-tab="second">
-    <table id="tabledata2" class="ui celled table">
+    <table id="tabledata2" class="ui two column celled table">
             <tr>
                 <td>Mobile Number</td>
                 <td>{{personal_info.mobile_number}}</td>
@@ -165,8 +167,8 @@
 <script type="text/javascript">
 
     $(document).ready(function() {
-        $('#tabledata1').DataTable();
-        $('#tabledata2').DataTable();
+        $('#tabledata1');
+        $('#tabledata2');
         $('.menu .item').tab();
     });
 
