--- a/inventory/templates/inventory/food_add.html
+++ b/inventory/templates/inventory/food_add.html
@@ -41,7 +41,7 @@
                                 </div>
 
                                 <div class="ui inverted right aligned segment" style="padding: 0px;">
-                                    <button class = "ui button green" type="submit" >{{ actiontype }}</button>
+                                    <button onclick="return confirm('Are you sure?')" class = "ui button green" type="submit" >{{ actiontype }}</button>
                                 </div>
                             </form>
                         </div>
