--- a/unitmanagement/templates/unitmanagement/health_form.html
+++ b/unitmanagement/templates/unitmanagement/health_form.html
@@ -5,7 +5,7 @@
     <h3 class="ui header">{{ title }}</h3>
     {% if messages %}
         {% for message in messages %}
-            <div class="ui green message" > {{ message }}</div>
+            <div class="{{style}}" > {{ message }}</div>
         {% endfor %}
     {% endif %}
 </div>
