--- a/unitmanagement/templates/unitmanagement/health_history.html
+++ b/unitmanagement/templates/unitmanagement/health_history.html
@@ -12,6 +12,7 @@
 <div class="ui top attached tabular menu">
     <a class="item active" data-tab="first">Health</a>
     <a class="item" data-tab="second">Physical Exam</a>
+    <a class="item" data-tab="third">Vaccinations</a>
 </div>
 <div class="ui tab segment active" data-tab="first">
     <table id="tabledata1" class="ui three column celled table">
@@ -63,11 +64,36 @@
         </tbody>
     </table>
 </div>
+<div class="ui tab segment" data-tab="third">
+    <table id="tabledata3" class="ui five column celled table">
+        <thead>
+            <tr>
+                <th>Disease</th>
+                <th>Vaccine Used</th>
+                <th>Date Vaccinated</th>
+                <th>Valid Until</th>
+                <th>Veterinarian</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for vaccine_data in vaccine_data %}
+            <tr>
+                <td>{{vaccine_data.disease}}</td>
+                <td >{{vaccine_data.vaccine}}</td>
+                <td >{{vaccine_data.date_vaccinated}}</td>
+                <td >{{vaccine_data.date_validity}}</td>
+                <td >Vet Name Here</td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+</div>
 <script type="text/javascript">
         
     $(document).ready(function() {
         $('#tabledata1').DataTable();
         $('#tabledata2').DataTable();
+        $('#tabledata3').DataTable();
         $('.menu .item').tab();
     } );
     
