--- a/profiles/templates/profiles/global-base-ui/sidebar_menu.html
+++ b/profiles/templates/profiles/global-base-ui/sidebar_menu.html
@@ -6,8 +6,8 @@
             <a class="item" href="{% url 'profiles:profile'%}"><i class="user circle icon"></i>Profile</a>
             <a class="item" href="{% url 'profiles:dashboard'%}"><i class="chart line icon"></i>Dashboard</a>
             <a class="item" href="{% url 'planningandacquiring:K9_list'%}"><i class="clipboard list icon"></i>Planning and Acquiring</a>
-            <a class="item" href="{% url 'training:index'%}"><i class="paw icon"></i>Training</a>
-            <a class="item" href="{% url 'deployment:index'%}"><i class="road icon"></i>Deployment</a>
+            <a class="item" href="{% url 'training:index'%}"><i class="bell icon"></i>Training</a>
+            <a class="item" href="{% url 'deployment:index'%}"><i class="shipping fast icon"></i>Deployment</a>
             <a class="item" href="{% url 'inventory:medicine_add'%}"><i class="warehouse icon"></i>Inventory</a>
             <a class="item" href="{% url 'unitmanagement:index'%}"><i class="folder open icon"></i>Unit Management</a>
             <a class="item" href="{% url 'profiles:login'%}">Logout</a>
