--- a/profiles/templates/profiles/sidebar_um.html
+++ b/profiles/templates/profiles/sidebar_um.html
@@ -11,19 +11,16 @@
                                     <a class="item"> <b>Unit Management Menu</b></a>
                                     
                                     <a href="{% url 'profiles:add_User_form'%}" class="item">Add User Form
-                                        <i class="user plus icon"></i>
+                                        <i class="user icon"></i>
                                     </a>
                                     <a href="{% url 'profiles:user_list'%}" class="item">User List
-                                        <i class="address book icon"></i>
+                                        <i class="h square icon"></i>
                                     </a>
                                     <a href="{% url 'unitmanagement:health_form'%}" class="item">Health Form
                                         <i class="first aid icon"></i>
                                     </a>  
                                     <a href="{% url 'unitmanagement:physical_exam_form'%}" class="item">Physical Exam Form
                                         <i class="heartbeat icon"></i>
-                                    </a>  
-                                    <a href="{% url 'unitmanagement:vaccination_form'%}" class="item">Vaccination Form
-                                        <i class="syringe icon"></i>
                                     </a>  
                                     <a href="{% url 'unitmanagement:health_record'%}" class="item">Health Records
                                         <i class="h square icon"></i>
