--- a/inventory/templates/inventory/medicine_inventory_details.html
+++ b/inventory/templates/inventory/medicine_inventory_details.html
@@ -20,15 +20,9 @@
     <form class="ui form" method="POST">
         <h4 class="ui dividing header">Details</h4>
             {% csrf_token %}
-            <div class = "two fields">
-                <div class="twelve wide field">
-                    <label>Medicine</label>
-                    {{form.medicine}}
-                </div>
-                <div class="four wide field">
-                    <label>Type</label>
-                    {{form.med_type}}
-                </div>
+            <div class="field">
+                <label>Medicine</label>
+                {{form.medicine}}
             </div>
 
             <div class="three fields">
